--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: roboto !important;
+}
+
+a, p, h1, h2, h3, h4, h5, h6, ::placeholder {
+    font-family: Raleway !important;
 }
 
 /* lista desafios hover */
@@ -12,5 +15,9 @@ body {
   transition: all 0.3s ease-in-out;
   background-color: #8d52e5;
   color: azure;
+}
+
+a {
+  text-decoration: none;
 }
 
