--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-colo: #F5F5F5;
+  background-color: #F5F5F5;
 }
 
 a, p, h1, h2, h3, h4, h5, h6, ::placeholder {
